fix footer overlap comments container on document view page; add like/dislike buttons; add bottom padding to comments and questions

--- a/front_end/ui/css/search.css
+++ b/front_end/ui/css/search.css
@@ -178,3 +178,7 @@ h4 {
   -webkit-margin-after: 0em;
 }
 /************************/
+
+.talk-bubble-margin {
+  margin-bottom: 20px;
+}
